# CinkPipeline

./: .gitignore  README.md  meson.build
src/: artifypipeline.vala  clean.vala  colorwork.vala  composit.vala  linework.vala  main.vala  prep.vala  snuff.vala  split.vala  test-simple.vala
